Fixed checkstyle warnings