@@ -8,6 +8,11 @@ import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.github.fge.jsonpatch.JsonPatch;
 import com.github.fge.jsonpatch.JsonPatchException;
+import com.unosquare.carmigo.dto.request.DistanceRequest;
+import com.unosquare.carmigo.dto.request.JourneyRequest;
+import com.unosquare.carmigo.dto.request.SearchJourneysRequest;
+import com.unosquare.carmigo.dto.response.DistanceResponse;
+import com.unosquare.carmigo.dto.response.JourneyResponse;
 import com.unosquare.carmigo.entity.Driver;
 import com.unosquare.carmigo.entity.Journey;
 import com.unosquare.carmigo.entity.Location;
@@ -15,11 +20,6 @@ import com.unosquare.carmigo.entity.Passenger;
 import com.unosquare.carmigo.exception.PatchException;
 import com.unosquare.carmigo.exception.ResourceNotFoundException;
 import com.unosquare.carmigo.exception.UnauthorizedException;
-import com.unosquare.carmigo.dto.request.DistanceRequest;
-import com.unosquare.carmigo.dto.request.JourneyRequest;
-import com.unosquare.carmigo.dto.request.SearchJourneysRequest;
-import com.unosquare.carmigo.dto.response.DistanceResponse;
-import com.unosquare.carmigo.dto.response.JourneyResponse;
 import com.unosquare.carmigo.openfeign.DistanceApi;
 import com.unosquare.carmigo.openfeign.DistanceHolder;
 import com.unosquare.carmigo.openfeign.Geocode;
@@ -38,6 +38,9 @@ import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+/**
+ * Handles requests regarding the {@link Journey} entity.
+ */
 @Service
 @RequiredArgsConstructor
 public class JourneyService {
@@ -51,14 +54,24 @@ public class JourneyService {
   private final AppUser appUser;
   private final PassengerService passengerService;
 
+  /**
+   * Fetches a journey.
+   * @param journeyId the journey id to search for.
+   * @return a {@link JourneyResponse}.
+   */
   public JourneyResponse getJourneyById(final int journeyId) {
     return modelMapper.map(findJourneyById(journeyId), JourneyResponse.class);
   }
 
+  /**
+   * Searches for journeys.
+   * @param searchJourneysRequest the search criteria as {@link SearchJourneysRequest}.
+   * @return a List of {@link JourneyResponse}.
+   */
   public List<JourneyResponse> searchJourneys(final SearchJourneysRequest searchJourneysRequest) {
     final List<Journey> result = journeyRepository.findJourneysByLocationFromIdAndLocationToIdAndDateTimeBetween(
-      searchJourneysRequest.getLocationIdFrom(), searchJourneysRequest.getLocationIdTo(),
-      searchJourneysRequest.getDateTimeFrom(), searchJourneysRequest.getDateTimeTo());
+        searchJourneysRequest.getLocationIdFrom(), searchJourneysRequest.getLocationIdTo(),
+        searchJourneysRequest.getDateTimeFrom(), searchJourneysRequest.getDateTimeTo());
     if (result.isEmpty()) {
       throw new ResourceNotFoundException("No journeys found for this route. " + searchJourneysRequest);
     }
@@ -66,6 +79,11 @@ public class JourneyService {
     return MapperUtils.mapList(result, JourneyResponse.class, modelMapper);
   }
 
+  /**
+   * Fetches journeys of a driver.
+   * @param driverId the driver id to fetch their journeys.
+   * @return  a List of {@link JourneyResponse}.
+   */
   public List<JourneyResponse> getJourneysByDriverId(final int driverId) {
     final List<Journey> result = journeyRepository.findJourneysByDriverId(driverId);
     if (result.isEmpty()) {
@@ -74,6 +92,11 @@ public class JourneyService {
     return MapperUtils.mapList(result, JourneyResponse.class, modelMapper);
   }
 
+  /**
+   * Fetches journeys of a passenger.
+   * @param passengerId the passenger id to fetch their journeys.
+   * @return  a List of {@link JourneyResponse}.
+   */
   public List<JourneyResponse> getJourneysByPassengersId(final int passengerId) {
     final List<Journey> result = journeyRepository.findJourneysByPassengersId(passengerId);
     if (result.isEmpty()) {
@@ -83,8 +106,14 @@ public class JourneyService {
     return MapperUtils.mapList(result, JourneyResponse.class, modelMapper);
   }
 
+  /**
+   * Only drivers can create journeys.
+   * @param driverId the driver id to create a journey for.
+   * @param journeyRequest the requirements as {@link JourneyRequest}.
+   * @return a {@link JourneyResponse}.
+   */
   public JourneyResponse createJourney(final int driverId, final JourneyRequest journeyRequest) {
-//    TODO: Check if driver exists first
+    // TODO: Check if driver exists first
     final Journey journey = modelMapper.map(journeyRequest, Journey.class);
     journey.setCreatedDate(Instant.now());
     journey.setLocationFrom(entityManager.getReference(Location.class, journeyRequest.getLocationIdFrom()));
@@ -95,16 +124,21 @@ public class JourneyService {
     return modelMapper.map(savedJourney, JourneyResponse.class);
   }
 
+  /**
+   * Enables the user to be a passenger of a journey.
+   * @param journeyId the journey id to add this passenger.
+   * @param passengerId the passenger id.
+   */
   public void addPassengerToJourney(final int journeyId, final int passengerId) {
     //    TODO: Check if passenger exists first
     final Journey journey = findJourneyById(journeyId);
     final List<Passenger> passengers = journey.getPassengers();
     passengers.forEach(
-      p -> {
-        if (p.getId() == passengerId) {
-          throw new EntityExistsException("Passenger is in this journey already.");
-        }
-      });
+        p -> {
+          if (p.getId() == passengerId) {
+            throw new EntityExistsException("Passenger is in this journey already.");
+          }
+        });
     if (journey.getDriver().getId() == passengerId) {
       throw new IllegalStateException("Driver cannot be passenger.");
     }
@@ -114,6 +148,29 @@ public class JourneyService {
     journeyRepository.save(journey);
   }
 
+  /**
+   * Corrects journey information.<br>
+   * Pass an array of a {@link JsonPatch} body with operation, the path and the value.<br>
+   * Accepted operation values are “add”, "remove", "replace", "move", "copy" and "test".<br>
+   * Here is an example which updates a journey to take up to 3 passengers, and it is going to destination id 5:<br>
+   * <pre>
+   *   [
+   *     {
+   *       "op": "replace",
+   *       "path": "/maxPassengers",
+   *       "value": "3"
+   *     },
+   *     {
+   *       "op": "replace",
+   *       "path": "/locationTo/id",
+   *       "value": "5"
+   *     }
+   *   ]
+   * </pre>
+   * @param journeyId the journey id to be updated.
+   * @param patch a {@link JsonPatch}.
+   * @return a {@link JourneyResponse}.
+   */
   public JourneyResponse patchJourney(final int journeyId, final JsonPatch patch) {
     final var response = modelMapper.map(findJourneyById(journeyId), JourneyResponse.class);
     verifyUserAuthorization(response.getDriver().getId());
@@ -122,16 +179,25 @@ public class JourneyService {
       final Journey patchedJourney = objectMapper.treeToValue(journeyNode, Journey.class);
       return modelMapper.map(journeyRepository.save(patchedJourney), JourneyResponse.class);
     } catch (final JsonPatchException | JsonProcessingException ex) {
-      throw new PatchException(String.format("Error updating journey id %d - %s", journeyId, ex.getMessage()));
+      throw new PatchException("Error updating journey id %d - %s".formatted(journeyId, ex.getMessage()));
     }
   }
 
+  /**
+   * Deletes a journey.
+   * @param journeyId the journey id to be deleted.
+   */
   public void deleteJourneyById(final int journeyId) {
     final Journey journey = findJourneyById(journeyId);
     verifyUserAuthorization(journey.getDriver().getId());
     journeyRepository.deleteById(journeyId);
   }
 
+  /**
+   * Enables the user to no longer be a passenger of a journey.
+   * @param journeyId the journey id to remove this passenger.
+   * @param passengerId the passenger id.
+   */
   @Transactional
   public void removePassengerFromJourney(final int journeyId, final int passengerId) {
     final Journey journey = findJourneyById(journeyId);
@@ -145,6 +211,11 @@ public class JourneyService {
     throw new EntityNotFoundException("Passenger is not in this journey.");
   }
 
+  /**
+   * Searches for the distance between two locations.
+   * @param distanceRequest the search criteria as {@link DistanceRequest}.
+   * @return a {@link DistanceResponse}.
+   */
   public DistanceResponse calculateDistance(final DistanceRequest distanceRequest) {
     final String request = prepareRequestToDistanceApi(distanceRequest);
     final DistanceHolder distanceHolder = distanceApi.getDistance(request);
@@ -153,7 +224,7 @@ public class JourneyService {
 
   private Journey findJourneyById(final int id) {
     return journeyRepository.findById(id)
-      .orElseThrow(() -> new ResourceNotFoundException(String.format("Journey id %d not found.", id)));
+      .orElseThrow(() -> new EntityNotFoundException("Journey id %d not found.".formatted(id)));
   }
 
   private void verifyUserAuthorization(final int userId) {
@@ -180,11 +251,11 @@ public class JourneyService {
     if (distanceHolder.getPoints().size() > 1) {
       final DistanceResponse response = new DistanceResponse();
       response.setLocationFrom(convertToDistanceResponseLocation(
-        distanceHolder.getPoints().get(0).getProperties().getGeocode()));
+          distanceHolder.getPoints().get(0).getProperties().getGeocode()));
       response.setLocationTo(convertToDistanceResponseLocation(
-        distanceHolder.getPoints().get(1).getProperties().getGeocode()));
+          distanceHolder.getPoints().get(1).getProperties().getGeocode()));
       response.setDistance(convertToDistanceResponseDistance(
-        distanceHolder.getSteps().get(0).getDistance().getGreatCircle()));
+          distanceHolder.getSteps().get(0).getDistance().getGreatCircle()));
       return response;
     }
     throw new NoResultException("DistanceHolder is empty.");
